--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
-        android:text="TextView"
+        android:text="Sign Up"
         android:textColor="#ff8f00"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -26,8 +26,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="37dp"
         android:ems="10"
-        android:inputType="textEmailAddress"
-        android:text="E-mail" />
+        android:hint="E-mail"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/editText_password"
